--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -7,6 +7,10 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+  <link rel="stylesheet" href="components/annotorious/example/highlight.js/zenburn.css">
+  <link rel="stylesheet" href="components/annotorious/css/theme-dark/annotorious-dark.css" />
+  <script src="components/annotorious/example/highlight.js/highlight.pack.js"></script>
+  <script src="components/annotorious/annotorious.min.js"></script>
 </head>
 <body>
 
